syntax = "proto3";

option go_package = ".;pb";

import "processor.proto";
import "query.proto";

message CreateProcessorRequest { CPU cpu = 1; }

message CreateProcessorResponse {
  CreateProcessorRequest request = 1;
  string cpuid = 2;
}

message QueryRequest { Query query = 1; }

message QueryResponse {
  QueryRequest request = 1;
  CPU cpu = 2;
}

message UploadImageRequest {
  oneof data {
    ImageInfo info = 1;
    bytes chunk = 2;
  }
}

message ImageInfo {
  string device = 1;
  string image_type = 2;
}

message UploadImageResponse {
  ImageInfo info = 1;
  string image_id = 2;
  uint32 image_size = 3;
}

message BidirectionalRequest {
  string id = 1;
  int64 value = 2;
}

message BidirectionalResponse {
  BidirectionalRequest req = 1;
  uint32 number = 2;
}

message DemoPermissionRequest {
  string user_id = 1;
  string token = 2;
}

message DemoPermissionResponse {
  DemoPermissionRequest request = 1;
  int32 status = 2;
  string message = 3;
}

service CPUService {
  rpc CreateProcessor(CreateProcessorRequest) returns (CreateProcessorResponse) {}; // Unary
  rpc Query(QueryRequest) returns (stream QueryResponse) {}; // Rcv Streaming data from server
  rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse) {}; // Send Streaming data to server
  rpc Bidirectional(stream BidirectionalRequest) returns (stream BidirectionalResponse) {}; // Bidirectional streaming
  rpc DemoPermission(DemoPermissionRequest) returns (DemoPermissionResponse) {};
  rpc DemoTokenPermission(DemoPermissionRequest) returns (DemoPermissionResponse) {};
}
