syntax = "proto3";

option go_package = ".;pb";

import "memory.proto";
import "google/protobuf/timestamp.proto";

message CPU {
    string brand_name = 1;
    uint32 num_cores = 2;
    Memory memory = 3;
    google.protobuf.Timestamp timestamp = 4;
}